# search-service

./: Dockerfile  pyproject.toml  requirements-backup.txt  requirements.txt
app/: database.py  main.py  models.py  redis_client.py  schemas.py  search_module.py
app/endpoints/: search.py
