[project]
name = "search-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "annoy>=1.17.3",
  "certifi>=2025.4.26",
  "charset-normalizer>=3.4.2",
  "fastapi>=0.115.12",
  "filelock>=3.18.0",
  "fsspec>=2025.5.1",
  "hf-xet>=1.1.3",
  "huggingface-hub>=0.33.0",
  "jinja2>=3.1.6",
  "joblib>=1.5.1",
  "mpmath>=1.3.0",
  "networkx>=3.5",
  "numpy>=2.3.0",
  "pg8000>=1.31.2",
  "psycopg2>=2.9.10",
  "psycopg2-binary>=2.9.10",
  "python-dotenv>=1.1.0",
  "sqlalchemy>=2.0.41",
  "uvicorn>=0.34.3",
]
